--- a/InvoxMedical/src/Transcription.Service/todo.txt
+++ b/InvoxMedical/src/Transcription.Service/todo.txt
@@ -1,4 +1,4 @@
 Add controller for MedicalRecords 
-Add post with return type transcription.
+Add post with return type transcription. -- nice to have.. queued messages.
 Add limit 4 text responses round robbin. Aleatorio de 1 a 4
-Add limit of 5% generic error .. de cada 100 peticiones, 20.. de cada 10, 2.. 
+Add limit of 5% generic error .. de cada 100 peticiones, 5-- generar numero aleatorio entre 1 y 20 y cada 20 request reiniciar
